--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && npm ci && npm run build",
   "outputDirectory": "frontend/.next",
   "framework": "nextjs",
-  "installCommand": "cd frontend && npm install"
+  "installCommand": "npm ci",
+  "devCommand": "cd frontend && npm run dev"
 }
