Make documentation files private - add to .gitignore and remove from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,14 @@ Thumbs.db
 
 # Build artifacts
 *.tsbuildinfo
+
+# Private documentation files (personal use only)
+ARCHITECTURE_COMPARISON.md
+INTERVIEW_CHEAT_SHEET.md
+RESUME_UPDATE_GUIDE.md
+TECHNICAL_DOCUMENTATION.md
+LARGE_CODEBASE_CHALLENGES.md
+PROJECT_NAME_SUGGESTIONS.md
+CODEFLOW_PRO_COMPLETE_PLAN.md
+VSCODE_FLOWCHART_EXTENSION_IDEA.md
+SAAS_PROJECT_IDEAS*.md
